--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
   <body>
     <section class="section">
-      <h1 class="section__title">Модальное окно</h1>
+      <h1 class="section__title">Модальное окно №1</h1>
       <button class="section__button section__button1">Открыть</button>
     </section>
 
     <section class="section">
-      <h1 class="section__title">Модальное окно</h1>
+      <h1 class="section__title">Модальное окно №2</h1>
       <button class="section__button section__button2">Открыть</button>
     </section>
 
